--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-h5-audio-player": "^2.3.1",
-    "react-scripts": "3.3.1"
+    "react-scripts": "3.3.1",
+    "weak-key": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
